# histcl

./: CMakeLists.txt  README.md
include/: equalise.hpp  fill_random.hpp  hist_eq.hpp  histogram.hpp  histogram_eq.hpp  histogram_global.hpp  inclusive_scan.hpp  lut.hpp  print_histogram.hpp  scan_lut.hpp
include/compute/: engine_cl.hpp  kernels.hpp
include/io/: image.hpp
include/math/: abs.hpp  ceil.hpp  div.hpp  floor.hpp  mod.hpp  round.hpp  sqrt.hpp  sum.hpp
include/utils/: range.hpp  singleton.hpp  template_helpers.hpp
kernels/: equalise.cl  histogram.cl  histogram_eq.cl  histogram_global.cl  histogram_local_wg.cl  lut.cl  scan.cl  scan_lut.cl
src/: main.cpp
src/compute/: engine_cl.cpp  kernels.cpp
src/io/: image.cpp
src/stb/: stb_impl.cpp
